add filter to config

--- a/maintenance.html
+++ b/maintenance.html
@@ -1,5 +1,6 @@
 <html>
-<body>
+<body bgcolor="#000000" text="white">
+
 
 <a href="process_emails.php">Process Emails</a></br>
 <a href="process_saved_files.php">Process Saved Files</a></br>
