--- a/maintenance.html
+++ b/maintenance.html
@@ -9,6 +9,8 @@
 <a href="config_angular/configs.php">Configs Page</a></br>
 </br>
 <a href="move_back_processed_emails.php">Move Back Processed Emails</a></br>
+</br>
+<a href="check_mailbox.php">Check Mailbox</a></br>
 
 
 </body>
