add reprocessing by attachment

--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
 <a href="process_emails.php">Process Emails</a></br>
 <a href="process_saved_files.php">Process Saved Files</a></br>
 </br>
-<a href="index.php">Results Page</a></br>
+<a href="results.php">Results Page</a></br>
 <a href="config_angular/configs.php">Configs Page</a></br>
 </br>
 <a href="move_back_processed_emails.php">Move Back Processed Emails</a></br>
 </br>
 <a href="check_mailbox.php">Check Mailbox</a></br>
+</br>
+<a href="server_config.php">Server Config</a></br>
 
 
 </body>
